--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-image: url("../Proposal/wp10391875-tom-and-jerry-pc-wallpapers.jpg");
+    background-image: url("https://wallpapercave.com/wp/wp10391875.jpg");
     background-size: 100% 100%;
     z-index: -1;
 }
